endorsement : add endorsement to change contrat extra_data fix #1187 http://rietveld.coopengo.com/2810002/

--- a/modules/endorsement/CHANGELOG
+++ b/modules/endorsement/CHANGELOG
@@ -1,3 +1,4 @@
+* Add extra_data endorsement
 * Add endorsement number
 * Allow to trigger calculate after application
 * Allow to specify restoration order
