loan: Fix #1359 Update french translation for loan kind

--- a/modules/loan/locale/fr_FR.po
+++ b/modules/loan/locale/fr_FR.po
@@ -815,7 +815,7 @@ msgstr "In Fine"
 
 msgctxt "selection:loan,kind:"
 msgid "Fixed Rate"
-msgstr "Taux Fixe"
+msgstr "Amortissable"
 
 msgctxt "selection:loan,kind:"
 msgid "Graduated"
@@ -827,7 +827,7 @@ msgstr "Taux Zéro"
 
 msgctxt "selection:loan,kind:"
 msgid "Intermediate"
-msgstr "Prêt Relais"
+msgstr "Relais"
 
 msgctxt "selection:loan,payment_frequency:"
 msgid ""
