contract_insurance_invoice : Add ws_rate_contract to allow for web-based rating
Fix #1388
review http://rietveld.coopengo.com/3960002

--- a/modules/contract_insurance_invoice/CHANGELOG
+++ b/modules/contract_insurance_invoice/CHANGELOG
@@ -1,3 +1,4 @@
+* Add rating webservice
 * Add invoice dates to description for contract insurance invoices
 * Display invoices in list view in different colors according to state
 
