--- a/modules/contract_insurance_invoice/locale/fr_FR.po
+++ b/modules/contract_insurance_invoice/locale/fr_FR.po
@@ -118,6 +118,24 @@ msgstr ""
 "partagent la même clé fonctionnelle :\n"
 "\"%s\"."
 
+msgctxt "error:contract.invoice:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.invoice:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:contract.premium.display:"
 msgid "No contract found in context"
 msgstr "Pas de contrat trouver dans le contexte"
@@ -490,6 +508,10 @@ msgctxt "field:contract.billing_information,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:contract.billing_information,is_once_per_contract:"
+msgid "Once Per Contract?"
+msgstr "Prime unique?"
+
 msgctxt "field:contract.billing_information,payment_term:"
 msgid "Payment Term"
 msgstr "Condition de paiement"
@@ -538,6 +560,10 @@ msgctxt "field:contract.invoice,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
 
+msgctxt "field:contract.invoice,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
 msgctxt "field:contract.invoice,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -577,6 +603,10 @@ msgstr "Date de mise à jour"
 msgctxt "field:contract.invoice,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
+
+msgctxt "field:contract.invoice,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:contract.invoice.create,id:"
 msgid "ID"
